<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="citu.teknoybuyandselluser.MakeTransactionsActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/nav_sort_by_date"
        android:title="@string/sort_by_date" />

    <item
        android:id="@+id/nav_sort_by_name"
        android:title="@string/sort_by_name" />

    <item
        android:id="@+id/nav_sort_by_price"
        android:title="@string/sort_by_price" />
</menu>
