<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/White">

    <ImageView
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:src="@drawable/tbs_1" />
    <ImageView
        android:layout_height="100dp"
        android:layout_width="wrap_content"
        android:src="@drawable/tbs_2" />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/input_id" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtStudentID"
            android:hint="@string/student_id"
            android:textColorHint="@color/SlateGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/input_fname" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtFirstName"
            android:hint="@string/first_name"
            android:textColorHint="@color/SlateGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/input_lname" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLastName"
            android:hint="@string/last_name"
            android:textColorHint="@color/SlateGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/input_lname" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUsername"
            android:hint="@string/user_name"
            android:textColorHint="@color/SlateGray"/>
    </LinearLayout>
</LinearLayout>
