<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:id="@+id/flContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <FrameLayout
                    android:id="@+id/framePicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/profpic"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginBottom="20dp"
                        android:layout_gravity="center_horizontal"
                        app:placeholderImage="@drawable/input_user"
                        app:roundAsCircle="true" />

                    <ProgressBar
                        android:id="@+id/progressUpload"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone" />
                </FrameLayout>

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/framePicture"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textbox"
                    android:drawableLeft="@drawable/ic_user"

                    android:drawablePadding="8dp"
                    android:padding="10dp"
                    android:text="@string/user_name"
                    android:textColorHint="@color/SlateGray"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/inputNewUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtUsername"
                    android:drawableLeft="@drawable/ic_newuser"
                    android:drawablePadding="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textbox"
                    android:hint="@string/new_username"
                    android:inputType="textCapSentences"
                    android:padding="10dp"
                    android:textColorHint="@color/SlateGray" />


                <EditText
                    android:id="@+id/inputCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inputNewUsername"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textbox"
                    android:drawableLeft="@drawable/ic_curpass"
                    android:drawablePadding="8dp"
                    android:fontFamily="Calibri"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/SlateGray" />


                <EditText
                    android:id="@+id/inputNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inputCurrentPassword"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textbox"
                    android:drawableLeft="@drawable/ic_newpass"
                    android:drawablePadding="8dp"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/SlateGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inputNewPassword"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textbox"
                    android:drawableLeft="@drawable/ic_confirm"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="@color/SlateGray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/txtPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inputConfirmPassword"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/photo"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnBrowse"
                    android:layout_width="150dp"
                    android:layout_height="33dp"
                    android:layout_below="@id/inputConfirmPassword"
                    android:layout_gravity="start"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/browse"
                    android:textColor="@color/White"
                    android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/btnBrowse"
                    android:gravity="center|bottom"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btnSellItem"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/positivebutton"
                        android:onClick="onEditProfile"
                        android:src="@drawable/button_sell"
                        android:text="@string/edit_profile"
                        android:textColor="@color/White" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/DrawerCol"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view"
        app:itemTextColor="@color/White"
        app:itemIconTint="@color/White"/>
</android.support.v4.widget.DrawerLayout>

