<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="false"
                    android:layout_centerHorizontal="false"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/item_stars"
                    android:paddingLeft="30dp"
                    android:paddingStart="30dp"
                    android:paddingTop="30dp"
                    android:src="@drawable/star" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_toRightOf="@id/imageView"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/txtYouHave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="30sp"
                        android:text="@string/you_have"
                        android:textColor="@color/Black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtNumberStars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtYouHave"
                        android:text="@string/num_stars"
                        android:textColor="@color/Black"
                        android:textSize="30sp" />
                </RelativeLayout>
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnClaimAward"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/Star"
                    android:text="@string/claim_award"
                    android:textColor="@color/White" />

                <ProgressBar
                    android:id="@+id/progressGetStars"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:indeterminate="true" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/LightYellow"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />
</android.support.v4.widget.DrawerLayout>
