<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="citu.teknoybuyandselluser.ChangePasswordActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="155dp"
        android:src="@drawable/toplogoapp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/tbs_1" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/input_user" />
        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:singleLine="true"
            android:textColorHint="@color/SlateGray"
            android:textSize="16dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/input_old" />
        <EditText
            android:id="@+id/txtOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="default"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/SlateGray"
            android:textSize="16dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/input_new" />
        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="default"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/SlateGray"
            android:textSize="16dp"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/input_lock" />
        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="default"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/SlateGray"
            android:textSize="16dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/Louie"
            android:onClick="onChangePassword"
            android:text="Submit"
            android:textColor="@color/White"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/White"
            android:onClick="onCancel"
            android:text="Cancel"
            android:textColor="@color/Black"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>